Need all points in T, not just closed points

--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -118,7 +118,7 @@ T \arrow{r}{h}& B
 \item There is an open $U \subset X_T$ where
 \begin{enumerate}
 \item $(g’)^{-1}(U) \to U$ is a closed immersion
-\item For every closed $t \in T$, the fiber $\left((g’)^{-1}(U)\right)_t$ is dense in $C_t$
+\item For every $t \in T$, the fiber $\left((g’)^{-1}(U)\right)_t$ is dense in $C_t$
 \end{enumerate}
 \end{enumerate}
 
