State tangent space lemma and fix apostraphes

--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -114,12 +114,17 @@ T \arrow{r}{h}& B
 \]
 
 \item $C$ is an algebraic space and $C \to T$ is a Cohen-Macauley morphism of relative dimension 1 which is flat, proper, and of finite presentation.
-\item The induced morphism $(g’) : C \to X_T$ is finite
+\item The induced morphism $(g') : C \to X_T$ is finite
 \item There is an open $U \subset X_T$ where
 \begin{enumerate}
-\item $(g’)^{-1}(U) \to U$ is a closed immersion
-\item For every $t \in T$, the fiber $\left((g’)^{-1}(U)\right)_t$ is dense in $C_t$
+\item $(g')^{-1}(U) \to U$ is a closed immersion
+\item For every $t \in T$, the fiber $\left((g')^{-1}(U)\right)_t$ is dense in $C_t$
 \end{enumerate}
 \end{enumerate}
+
+\begin{lemma}
+	For every field $k$ and every $x_0\in \CMfunctor_{X/B}(k)$, $T\CMfunctor_{X/B,k,x_0}$ is finite-dimensional.
+	\label{lem:axiom3}
+\end{lemma}
 
 \end{document}
