Add remark after tangent space lemma
Really, the lemma describes a less restrictive tangent space.  This is adequate however, and the remark spells this out.

--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -305,4 +305,8 @@ $$
 
 	Altogether, we conclude that $T_{k,x_0}\CMfunctor_{X/S}$ is finite-dimensional, as claimed.
 	\end{proof}
+	\begin{remark}
+		Strictly speaking, in the proof of Lemma \ref{lem:axiom3}, we describe a vector space which merely contains $T_{k,x_0}\CMfunctor_{X/S}$--we have ignored data like the generic embedding condition.
+		This is adequate however, because our goal is merely to demonstrate that the actual tangent space is finite-dimensional.
+	\end{remark}
 \end{document}
