Fix typo in situation

--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -242,7 +242,7 @@ In this section we prove the (Honsen?) functor is an algebraic space.\\
 \begin{situation}
 \label{situation-cm}
 Let $S$ be a scheme. Let $f : X \to B$ be a morphism of algebraic spaces
-over $S$. Assume that $f$ is of separated and of finite presentation.
+over $S$. Assume that $f$ is separated and of finite presentation.
 For any scheme $T$ over $B$ we will denote $X_T$ the base change
 of $X$ to $T$. Given such a $T$ we set:
 \begin{align*}
